# rsedu

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251216_182846_create_users_table.rs
backend/src/: config.rs  database.rs  main.rs
backend/src/api/: mod.rs  users.rs
backend/src/application/: mod.rs
backend/src/domain/: mod.rs
backend/src/dto/: user.rs
backend/src/entitie/: users.rs
backend/src/entities/: mod.rs  prelude.rs
backend/src/infrastructure/: mod.rs
backend/src/repositories/: user_repository.rs
docker/: docker-compose.yml
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: mod.rs
frontend/src/pages/: home.rs
