[workspace]
members = ["backend", "frontend", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sayyed <sayyedkamran@gmail.com>"]  # Update with your email

[workspace.dependencies]
# Async runtime - the foundation for async Rust
tokio = { version = "1.35", features = ["full"] }

# Serialization - converting Rust structs to/from JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling - better error types
thiserror = "1.0"
anyhow = "1.0"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data validation
validator = { version = "0.18", features = ["derive"] }

# Environment variable loading
dotenvy = "0.15"
