[package]
name = "rsedu-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
dotenvy = { workspace = true }

# Web framework
axum = { version = "0.8.7", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }

# Database
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }

# Authentication (we'll use these in Phase 1)
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "aws_lc_rs"] }
argon2 = "0.5.3"

# API Documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }

# Configuration management
config = "0.15.19"

[dev-dependencies]
tokio-test = "0.4.4"